--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,19 @@
 *,
 *::before,
 *::after {
-  box-sizing: border-box;
+    box-sizing: border-box;
+}
+
+a {
+    text-decoration: none;
 }
 
 body {
-  font-family: "Roboto", sans-serif;
-  letter-spacing: 0.15px;
+    font-family: "Roboto", sans-serif;
+    letter-spacing: 0.15px;
+    margin: 0 auto;
+    color: #081F32;
+    font-weight: 400;
 }
 
 h1,
@@ -14,18 +21,18 @@ h2,
 h3,
 h4,
 p {
-  margin: 0;
+    margin: 0;
 }
 
 ul,
 ol {
-  margin: 0;
-  padding: 0;
-  list-style: none;
+    margin: 0;
+    padding: 0;
+    list-style: none;
 }
 
 img {
-  display: block;
-  width: 100%;
-  height: auto;
+    display: block;
+    width: 100%;
+    height: auto;
 }
