--- a/src/components/BackButton/BackButton.module.css
+++ b/src/components/BackButton/BackButton.module.css
@@ -4,7 +4,11 @@
     width: 119px;
     padding: 4px 0 4px 4px;
     margin-bottom: 32px;
-    margin-left: 0;
+    transition: transform 250ms ease-in-out;
+}
+
+.backWrapper:hover{
+    transform: scale(1.05);
 }
 
 .backIcon {
