--- a/src/components/CharacterCard/CharacterCard.module.css
+++ b/src/components/CharacterCard/CharacterCard.module.css
@@ -1,12 +1,18 @@
 .cardWrapper {
     box-shadow: 0 1px 5px rgba(0, 0, 0, 0.2), 0 3px 4px rgba(0, 0, 0, 0.12), 0 2px 4px rgba(0, 0, 0, 0.14);
     border-radius: 4px;
+    overflow: hidden;
+    transition: transform 250ms ease-in-out;
+}
+.cardWrapper:hover {
+    transform: scale(1.05);
 }
 
 .cardImage {
     width: 240px;
     height: 161px;
     object-fit: cover;
+
 }
 
 .cardHeadline {
