--- a/src/components/CharacterInfoCard/CharacterInfoCard.module.css
+++ b/src/components/CharacterInfoCard/CharacterInfoCard.module.css
@@ -14,6 +14,11 @@
     border: 5px solid #F2F2F7;
     border-radius: 150px;
     margin-bottom: 16px;
+    transition: transform 250ms ease-in-out;
+}
+
+.cardWrapper:hover .cardImage{
+    transform: scale(1.05);
 }
 
 .cardTitle {
@@ -23,6 +28,7 @@
     line-height: 56px;
     display: flex;
     align-items: center;
+    justify-content: center;
     text-align: center;
     margin-bottom: 48px;
 }
