--- a/src/components/ModalConfirm/ModalConfirm.module.css
+++ b/src/components/ModalConfirm/ModalConfirm.module.css
@@ -5,7 +5,7 @@
 }
 
 .confirmTitle {
-    font-size: 18px;
+    font-size: 12px;
     text-align: center;
 }
 
@@ -24,12 +24,14 @@
     font-size: 14px;
     line-height: 1.35;
     color: black;
-    border: 2px solid green;
+    /*border: 2px solid green;*/
     border-radius: 40px;
     cursor: pointer;
     width: 100px;
     height: 34px;
-    background-color: green;
+    background-color: rgba(4,140,0,0.75);
+    border: 2px solid rgb(0, 166, 191);
+    box-shadow: 0 0 5px 2px rgba(4,140,0,0.75);
     transition: transform 250ms ease-in-out;
 }
 
